--- a/Scrolling Text/style.css
+++ b/Scrolling Text/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Arial, sans-serif;
 }
 
 html, body {
@@ -11,9 +12,34 @@ html, body {
 
 body{
     background-color: #111;
+    overflow-x: hidden;
 }
 
 #page1, #page2, #page3 {
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    padding: 5vw 0;
+}
+
+#move {
+    background-color: #D8FF04;
+    display: flex;
+    padding: 2.5vw;
+}
+
+.marque h1 {
+    font-size: 60px;
+}
+
+.marque {
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    gap: 3vw;
+    padding: 0 1.5vw;
+    transform: translateX(-100);
+}
+
+.marque img {
+    height: 60px;
 }
